[package]
authors = ["Doug Anderson <DougAnderson444@peerpiper.io>"]
categories = ["asynchronous", "network-programming", "wasm", "web-programming"]
description = "WebRTC for libp2p under WASM environment"
edition = "2021"
keywords = ["libp2p", "networking", "peer-to-peer"]
license = "MIT"
name = "libp2p-webrtc-websys"
repository = "https://github.com/libp2p/rust-libp2p"
version = "0.4.0-alpha.2"
publish = true

[dependencies]
bytes = "1"
futures = "0.3.31"
getrandom = { version = "0.2.15", features = ["js"] }
hex = "0.4.3"
js-sys = { version = "0.3" }
libp2p-core = "0.42.0"
libp2p-identity = "0.2.10"
libp2p-webrtc-utils = "0.3.0"
send_wrapper = { version = "0.6.0", features = ["futures"] }
thiserror = "1"
tracing = "0.1.40"
wasm-bindgen = { version = "0.2.90" }
wasm-bindgen-futures = { version = "0.4.42" }
web-sys = { version = "0.3.70", features = ["Document", "Location", "MessageEvent", "Navigator", "RtcCertificate", "RtcConfiguration", "RtcDataChannel", "RtcDataChannelEvent", "RtcDataChannelInit", "RtcDataChannelState", "RtcDataChannelType", "RtcPeerConnection", "RtcSdpType", "RtcSessionDescription", "RtcSessionDescriptionInit", "Window"] }

[lints]
workspace = true
